Async mechanism to feed-service